ghost/mysql-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ghost-mysql-headless
  namespace: ghost
spec:
  clusterIP: None
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: ghost
    app.kubernetes.io/name: mysql
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: ghost-mysql
  namespace: ghost
  labels:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: ghost
    app.kubernetes.io/name: mysql
spec:
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: mysql
  selector:
    app.kubernetes.io/component: primary
    app.kubernetes.io/instance: ghost
    app.kubernetes.io/name: mysql
  sessionAffinity: None
  type: ClusterIP
