ghost/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ghost
  namespace: ghost
  labels:
    app.kubernetes.io/component: ghost
    app.kubernetes.io/instance: ghost
    app.kubernetes.io/name: ghost
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: ghost
    app.kubernetes.io/instance: ghost
    app.kubernetes.io/name: ghost
  sessionAffinity: None
  type: ClusterIP
