ghost/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: abcs.news
  namespace: ghost
  labels:
    environment: production
spec:
  ingressClassName: nginx
  tls:
    - secretName: "abcs.news-tls"
      hosts:
        - "abcs.news"
        - "ghost.abcs.news"
  rules:
    - host: "abcs.news"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ghost
                port:
                  number: 80
  rules:
    - host: "ghost.abcs.news"
      http:
        paths:
          - path: /ghost/
            pathType: ImplementationSpecific
            backend:
              service:
                name: ghost
                port:
                  number: 80
# status:
#   loadBalancer:
#     ingress:
#       # Let's use the same IP as everyone else
#       - ip: 192.168.1.145
